# sig-networks

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  classification_utils.py  deepsignet.py  huggingface_loader.py  noxfile.py  pyproject.toml  specific_classification_utils.py
.github/workflows/: ci.yml
docs/: authors.rst  baseline_models.rst  conf.py  index.rst  seqsignet_models.rst  sw_attention.rst  swnu.rst
examples/AnnoMI/: anno_mi-client-baseline-bilstm.py  anno_mi-client-baseline-ffn-history.py  anno_mi-client-seqsignet-attention-bilstm-script.py  anno_mi-client-seqsignet-attention-encoder-script.py  anno_mi-client-seqsignet-example.ipynb  anno_mi-client-swnu-example.ipynb  load_anno_mi.py
examples/Rumours/: rumours-seqsignet-attention-bilstm-script.py
examples/Stance/: load_stance.py  stance-baseline-ffn-history.ipynb
examples/Talklife_MoC/: talklifemoc-baseline-bert.ipynb  talklifemoc-baseline-bilstm-w11.ipynb  talklifemoc-baseline-bilstm-w20.ipynb  talklifemoc-baseline-bilstm-w35.ipynb  talklifemoc-baseline-bilstm-w5.ipynb  talklifemoc-baseline-ffn-history.ipynb  talklifemoc-baseline-ffn.ipynb  talklifemoc-swmhau-w11.ipynb  talklifemoc-swmhau-w20.ipynb  talklifemoc-swmhau-w5.ipynb  talklifemoc-swnu-bilstm-35.ipynb  talklifemoc-swnu-bilstm.ipynb  talklifemoc-swnu-w11.ipynb  talklifemoc-swnu-w20.ipynb  talklifemoc-swnu-w5.ipynb
nlp_signature_networks/: ffn.py  focal_loss.py  pytorch_utils.py
nlpsig_networks/: bilstm.py  deepsignet.py  feature_concatenation.py  ffn.py  ffn_baseline.py  focal_loss.py  lstm_baseline.py  pytorch_utils.py  seqsignet_attention.py  seqsignet_attention_bilstm.py  seqsignet_attention_encoder.py  seqsignet_attention_transformer_encoder.py  seqsignet_bilstm.py  seqsignet_full_attention.py  snwu_network.py  specific_classification_utils.py  swmhau.py  swmhau_network.py  swnu.py  swnu_bilstm.py  swnu_network.py  utils.py
nlpsig_networks/scripts/: ffn_baseline_functions.py  fine_tune_bert_classification.py  implement_model.py  lstm_baseline_functions.py  sdsn_functions.py  seqsignet_attention_bilstm_functions.py  seqsignet_attention_encoder_functions.py  seqsignet_attention_functions.py  seqsignet_attention_transformer_encoder_functions.py  seqsignet_full_attention_functions.py  seqsignet_functions.py  swmhau_network_functions.py  swnu_network_functions.py
notebooks/: feed-forward-mnist.ipynb  mha-mask-dev.ipynb  pathbert_talklife_deepsignature.ipynb  results-readout.py  seq-sig-net_rumoureval.ipynb  seqsignet-padding-dev.ipynb  talklife_bilstmSbert_experiments.py
notebooks/AnnoMI/: AnnoMI-full.csv  anno_mi-client-baseline-bert.ipynb  anno_mi-client-baseline-bert.py  anno_mi-client-baseline-bilstm.py  anno_mi-client-baseline-ffn-history.py  anno_mi-client-baseline-ffn-signatures.ipynb  anno_mi-client-baseline-ffn.ipynb  anno_mi-client-baseline-ffn.py  anno_mi-client-lstm.ipynb  anno_mi-client-seqsignet-attention-bilstm-script.py  anno_mi-client-seqsignet-attention-bilstm.ipynb  anno_mi-client-seqsignet-attention-encoder-script.py  anno_mi-client-seqsignet-example.ipynb  anno_mi-client-seqsignet-script.py  anno_mi-client-swmhau-cls-pooling.ipynb  anno_mi-client-swmhau-script.py  anno_mi-client-swnu-example.ipynb  anno_mi-client-swnu-lstm-pooling.ipynb  anno_mi-client-swnu-script.py  anno_mi-client-swnu.ipynb  anno_mi-client.ipynb  anno_mi-dev.ipynb  anno_mi.ipynb  best_model.pkl  history_test_bilstm.ipynb  load_anno_mi.py  sbert_embeddings.py
notebooks/Reddit_MoC/: load_redditmoc.py  load_sbert-embeddings.py  redditmoc-baseline-bert.ipynb  redditmoc-baseline-bilstm.ipynb  redditmoc-baseline-ffn.ipynb  redditmoc-swmhau-masked.ipynb
notebooks/Rumours/: Untitled.ipynb  history_example.ipynb  load_rumours.py  load_sbert-embeddings.py  load_sbert_embeddings.py  mha-mask-dev.ipynb  rumours-baseline-bert.ipynb  rumours-baseline-bert.py  (+28 more)
tests/: test_package.py
(+586 files in other folders)
