[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sig_networks"
authors = [
  { name = "Ryan Chan", email = "rchan@turing.ac.uk" },
  { name = "Talia Tseriotou", email = "t.tseriotou@qmul.ac.uk" },
  { name = "Kasra Hosseini", email = "khosseini@turing.ac.uk" },
]
description = "Neural networks for longitudinal NLP classification tasks."
readme = "README.md"
requires-python = ">=3.8, <3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "torch == 1.9.0",
    "torchvision == 0.10.0",
    "signatory == 1.2.6.1.9.0",
    "tdqm >= 0.0.1",
    "pandas >= 1.5.3",
    "umap-learn >= 0.5.3",
    "scikit-learn >= 1.2.2",
    "datasets >= 2.6.1",
    "distinctipy >= 1.2.2",
    "evaluate >= 0.4.0",
    "accelerate == 0.20.1",
    "transformers == 4.30.2"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=4.0",
  "myst_parser>=0.13",
  "sphinx-book-theme>=0.1.0",
  "sphinx_copybutton",
  "furo",
]

[project.urls]
Homepage = "https://github.com/datasig-ac-uk/nlpsig"
"Bug Tracker" = "https://github.com/datasig-ac-uk/nlpsig/issues"
Discussions = "https://github.com/datasig-ac-uk/nlpsig/discussions"
Changelog = "https://github.com/datasig-ac-uk/nlpsig/releases"
[tool.hatch]
version.path = "src/sig_networks/__init__.py"
envs.default.dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:Tensorflow not installed; ParametricUMAP will be unavailable:ImportWarning", # umap
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning", # umap
    "ignore:Deprecated call to *:DeprecationWarning",
    "ignore:numba.core.errors.NumbaDeprecationWarning", # umap using numba
    "ignore:numba.core.errors.NumbaPendingDeprecationWarning", # umap using numba
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.8"
# warn_unused_configs = true
# strict = true
# show_error_codes = true
# enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# warn_unreachable = true


[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths= ["src/nlpsig/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
]
